	- fix: add u+w to FIXPERMS.
	- add buildtime to rpmds, methods to retrieve.
	- python: hide labelCompare() underneath ds.cmp(a,b).
	- fix: segfault on --recontext if file_contexts unreadable (#117374).
	- fix: /etc/security/selinux/file_contexts is default path.
	- fix: no transaction lock if --test was specified (#119783).
	- perl: skip new-fangled head[34] while generating deps (#118243).

4.2.2 -> 4.3:
	- upgrade to zlib-1.2.beta7.
	- fix: short option help missing string terminator.
	- permit secondary tag match patterns with RPMQV_ALL.
	- fix: cut-n-paste error setting nopromote for Conflicts: (#81965).
	- don't use error string after gzclose (Dmitry V. Levin).
	- only internal Berkeley db from now on.
	- revive "make dist".
	- fix: added index size wrong iff _transaction_color != 0/3 (#103865).
	- fix: escape '+' in regex patterns through RPMMIRE_DEFAULT (#103851).
	- RPMMIRE_DEFAULT is overkill, use RPMMIRE_STRCMP instead (#103851).
	- don't use mktemp if mkstemp is available (#103850).
	- use -fPIC -DPIC on all platforms, not just mandatory (#112713).
	- python: return None for NEVRAO, [] for everything else.
	- python: throw exception on bad arg to labelCompare (#113661).
	- re-add --enable-posixmutexes to build.
	- fix: set fcontext from pkg when file_contexts doesn't exist (#114040).
	- fix: set fcontext for "mkdir -p" directories not in packages.
	- fix: setfiles (aka rpmsx.c) dinna handle patterns correctly.
	- establish rpm_script_t before scriptlet exec.
	- python: add patch to rpm-4_3 to initialize RE contexts.
	- fix: only first "mkdir -p" directory had context set.
	- stable sort for policy specifications, patterns before paths.
	- set "rpm_script_t" exec type for scriptlets iff /bin/sh, else default.
	- force FD_CLOEXEC on 1st 100 inherited fdno's.
	- serialize rpmtsRun() using fcntl on /var/lock/rpm/transaction.
	- permit globs in macrofiles: directive (#117217).
	- fix: segfault generating transaction serialization lock path.