@@ -490,6 +490,7 @@ exit 0
 - fix: /etc/security/selinux/file_contexts is default path.
 - fix: no transaction lock if --test was specified (#119783).
 - perl: skip new-fangled head[34] while generating deps (#118243).
+- perl: use __perl for perl variable macros (#115156).
 
 * Tue Mar 30 2004 Jeff Johnson <jbj@jbj.org> 4.3.1-0.1
 - fix: don't add leading space to %* argv expansion (#119059).
